--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,23 @@
-<html>
-    <head>
-        
-    </head>
-    <body>
+<!doctype html>
 
-    </body>
-    <footer>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-    </footer>
+  <title>Home Page Project</title>
+  <meta name="description" content="Project to make a Home Page">
+  <meta name="author" content="Code Scrubber">
+
+  <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
+<body>
+    <nav>
+        <a href="/html/">HTML</a> |
+        <a href="/css/">CSS</a> |
+        <a href="/js/">JavaScript</a> |
+        <a href="/python/">Python</a>
+      </nav>
+</body>
 </html>
