--- a/html/index.html
+++ b/html/index.html
@@ -1,23 +1,109 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Home Page Project</title>
-  <meta name="description" content="Project to make a Home Page">
-  <meta name="author" content="Code Scrubber">
-
-  <link rel="stylesheet" href="css/styles.css">
+    <title>Home Page Project</title>
+    <meta name="description" content="Project to make a Home Page">
+    <meta name="author" content="Code Scrubber">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
 <body>
     <nav>
-        <a href="/html/">HTML</a> |
-        <a href="/css/">CSS</a> |
-        <a href="/js/">JavaScript</a> |
-        <a href="/python/">Python</a>
-      </nav>
+        <ul class="nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/work/">Work</a></li>
+            <li><a href="/clients/">Clients</a></li>
+            <li><a href="/contact/">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <p>
+                    THIS IS THE FORMS
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum, nulla at blandit
+                    tincidunt, odio metus sollicitudin tortor, vel efficitur mi est et risus. Curabitur hendrerit
+                    feugiat tempor. Duis non maximus lorem. Nulla posuere, elit eu interdum aliquam, tortor nulla dictum
+                    dui, efficitur sollicitudin sapien sem vel lectus. Donec dignissim congue elit, sed fermentum augue
+                    accumsan et. Vivamus malesuada ex finibus aliquam molestie. Nunc quis pulvinar arcu, et auctor
+                    neque. Nullam sed mauris at ligula dapibus porttitor. Vestibulum sit amet dui a turpis laoreet
+                    malesuada non placerat elit. Proin tellus nunc, molestie in pellentesque nec, ornare ut diam. Sed ex
+                    ipsum, interdum a risus ac, tincidunt consectetur erat. Pellentesque nisi lectus, porta placerat
+                    orci eu, dapibus laoreet est. Sed mollis erat vitae viverra interdum. Suspendisse quis mauris eget
+                    felis suscipit fermentum eget et erat. Integer eu augue non erat lobortis pharetra nec in lectus.
+                    Maecenas convallis auctor neque.
+                </p>
+            </div>
+
+            <div class="col-md-9">
+                <p>
+                    THIS IS THE ARTICLES
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum, nulla at blandit
+                    tincidunt, odio metus sollicitudin tortor, vel efficitur mi est et risus. Curabitur hendrerit
+                    feugiat tempor. Duis non maximus lorem. Nulla posuere, elit eu interdum aliquam, tortor nulla dictum
+                    dui, efficitur sollicitudin sapien sem vel lectus. Donec dignissim congue elit, sed fermentum augue
+                    accumsan et. Vivamus malesuada ex finibus aliquam molestie. Nunc quis pulvinar arcu, et auctor
+                    neque. Nullam sed mauris at ligula dapibus porttitor. Vestibulum sit amet dui a turpis laoreet
+                    malesuada non placerat elit. Proin tellus nunc, molestie in pellentesque nec, ornare ut diam. Sed ex
+                    ipsum, interdum a risus ac, tincidunt consectetur erat. Pellentesque nisi lectus, porta placerat
+                    orci eu, dapibus laoreet est. Sed mollis erat vitae viverra interdum. Suspendisse quis mauris eget
+                    felis suscipit fermentum eget et erat. Integer eu augue non erat lobortis pharetra nec in lectus.
+                    Maecenas convallis auctor neque.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum, nulla at blandit
+                    tincidunt, odio metus sollicitudin tortor, vel efficitur mi est et risus. Curabitur hendrerit
+                    feugiat tempor. Duis non maximus lorem. Nulla posuere, elit eu interdum aliquam, tortor nulla dictum
+                    dui, efficitur sollicitudin sapien sem vel lectus. Donec dignissim congue elit, sed fermentum augue
+                    accumsan et. Vivamus malesuada ex finibus aliquam molestie. Nunc quis pulvinar arcu, et auctor
+                    neque. Nullam sed mauris at ligula dapibus porttitor. Vestibulum sit amet dui a turpis laoreet
+                    malesuada non placerat elit. Proin tellus nunc, molestie in pellentesque nec, ornare ut diam. Sed ex
+                    ipsum, interdum a risus ac, tincidunt consectetur erat. Pellentesque nisi lectus, porta placerat
+                    orci eu, dapibus laoreet est. Sed mollis erat vitae viverra interdum. Suspendisse quis mauris eget
+                    felis suscipit fermentum eget et erat. Integer eu augue non erat lobortis pharetra nec in lectus.
+                    Maecenas convallis auctor neque.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum, nulla at blandit
+                    tincidunt, odio metus sollicitudin tortor, vel efficitur mi est et risus. Curabitur hendrerit
+                    feugiat tempor. Duis non maximus lorem. Nulla posuere, elit eu interdum aliquam, tortor nulla dictum
+                    dui, efficitur sollicitudin sapien sem vel lectus. Donec dignissim congue elit, sed fermentum augue
+                    accumsan et. Vivamus malesuada ex finibus aliquam molestie. Nunc quis pulvinar arcu, et auctor
+                    neque. Nullam sed mauris at ligula dapibus porttitor. Vestibulum sit amet dui a turpis laoreet
+                    malesuada non placerat elit. Proin tellus nunc, molestie in pellentesque nec, ornare ut diam. Sed ex
+                    ipsum, interdum a risus ac, tincidunt consectetur erat. Pellentesque nisi lectus, porta placerat
+                    orci eu, dapibus laoreet est. Sed mollis erat vitae viverra interdum. Suspendisse quis mauris eget
+                    felis suscipit fermentum eget et erat. Integer eu augue non erat lobortis pharetra nec in lectus.
+                    Maecenas convallis auctor neque.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum, nulla at blandit
+                    tincidunt, odio metus sollicitudin tortor, vel efficitur mi est et risus. Curabitur hendrerit
+                    feugiat tempor. Duis non maximus lorem. Nulla posuere, elit eu interdum aliquam, tortor nulla dictum
+                    dui, efficitur sollicitudin sapien sem vel lectus. Donec dignissim congue elit, sed fermentum augue
+                    accumsan et. Vivamus malesuada ex finibus aliquam molestie. Nunc quis pulvinar arcu, et auctor
+                    neque. Nullam sed mauris at ligula dapibus porttitor. Vestibulum sit amet dui a turpis laoreet
+                    malesuada non placerat elit. Proin tellus nunc, molestie in pellentesque nec, ornare ut diam. Sed ex
+                    ipsum, interdum a risus ac, tincidunt consectetur erat. Pellentesque nisi lectus, porta placerat
+                    orci eu, dapibus laoreet est. Sed mollis erat vitae viverra interdum. Suspendisse quis mauris eget
+                    felis suscipit fermentum eget et erat. Integer eu augue non erat lobortis pharetra nec in lectus.
+                    Maecenas convallis auctor neque.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        The footer data goes here.
+    </footer>
 </body>
+
 </html>
